llm-servers/hf-tgi/standalone/03-hf-tgi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hf-tgi-service
  labels:
    app: hf-tgi
spec:
  type: ClusterIP
  selector:
    app: hf-tgi
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
