llm-servers/hf-tgi/standalone/04-hf-tgi-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hf-tgi-route
  labels:
    app: hf-tgi
spec:
  to:
    kind: Service
    name: hf-tgi-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
